<resources>
    <string name="app_name">TicTacToe</string>
    <string name="single_player">Single</string>
    <string name="_2_players">2 Players</string>
    <string name="board_size">Board Size</string>
    <string name="_3_x_3">3 X 3</string>
    <string name="_5_x_5" />
    <string name="_51_x_5">5 X 5</string>
    <string name="choose_marker">Choose Marker</string>
    <string name="_x">X - PLAYER 1</string>
    <string name="_o">O - PLAYER 2</string>
    <string name="start_game">Start Game</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="_colon">:</string>
    <string name="_player_1_score">0</string>
    <string name="_player_2_score">0</string>
    <string name="restart">ReStart</string>
    <string name="ok">OK</string>
</resources>
