<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Game Mode "
             android:textSize="20sp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"/>
         <LinearLayout
             android:layout_marginTop="16dp"
             android:layout_marginLeft="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RadioGroup
                 android:id="@+id/rg1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <RadioButton
                     android:id="@+id/rb1"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="@string/single_player"
                     android:paddingLeft="8dp"
                     android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:fontFamily="sans-serif-smallcaps"/>
                 <RadioButton
                     android:id="@+id/rb2"
                     android:layout_marginLeft="50dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="@string/_2_players"
                     android:paddingLeft="8dp"
                     android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:fontFamily="sans-serif-smallcaps"/>

             </RadioGroup>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/board_size"
                 android:textSize="20sp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"/>
             <RadioGroup
                 android:id="@+id/rg2"
                 android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <RadioButton
                    android:id="@+id/rb3"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="@string/_3_x_3"
                     android:paddingLeft="8sp"
                     android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:fontFamily="sans-serif-smallcaps"/>
                 <RadioButton
                     android:id="@+id/rb4"
                     android:layout_marginLeft="50dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="@string/_51_x_5"
                     android:paddingLeft="8dp"
                     android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:fontFamily="sans-serif-smallcaps"/>

             </RadioGroup>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/choose_marker"
                 android:textSize="20sp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"/>
             <RadioGroup
                 android:id="@+id/rg3"
                 android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <RadioButton
                    android:id="@+id/rb5"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="@string/_x"
                     android:paddingLeft="8dp"
                     android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:fontFamily="sans-serif-smallcaps"/>
                 <RadioButton
                     android:id="@+id/rb6"
                     android:layout_marginLeft="50dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="@string/_o"
                     android:paddingLeft="8dp"
                     android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:layout_marginRight="8dp"
                     android:fontFamily="sans-serif-smallcaps"/>

             </RadioGroup>
             <Button
                 android:id="@+id/startGame"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/start_game"
                 android:textColor="#000"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
         </LinearLayout>
    </LinearLayout>
</android.widget.LinearLayout>